changed the color to green

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 :root {
-	--primary-color: #FFBF00;
+	--primary-color: #47A847;
 	/* Bright orange color */
-	--hover-color: #E0AC00;
+	--hover-color: #328336;
 	/* Hover color */
 	--text-color: #D0D0D1;
 	/* Text color */
