--- a/styles/main.css
+++ b/styles/main.css
@@ -39,25 +39,23 @@ body {
 }
 
 /* General Section Styles */
-#projects,
-#about {
+#feature {
   padding: 3rem 2rem;
   text-align: center;
 }
 
-#project-grid,
-.project-card {
-  max-width: 1200px;
+#content {
+  max-width: 800px;
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 /* Grid Styles */
-#project-grid {
+#grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
-  margin: 2rem 0;
+  margin-top: 3rem; 
 }
 
 /* Headings */
@@ -74,7 +72,8 @@ h3 {
 }
 
 /* Buttons */
-.page-btn {
+.page-btn,
+.cta {
   background-color: var(--primary-color);
   color: var(--button-text-color);
   font-size: 1rem;
@@ -87,7 +86,8 @@ h3 {
   margin: 1rem 0.5rem;
 }
 
-.page-btn:hover {
+.page-btn:hover,
+.cta:hover {
   background-color: var(--hover-color);
 }
 
@@ -112,4 +112,60 @@ h3 {
   justify-content: center;
   gap: 1rem;
   margin-top: 1rem;
+}
+
+
+/* Grid Styles for Skills Section */
+#skills-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Dynamic columns */
+  gap: 2rem;
+  padding: 2rem 1rem; /* Add some padding around the grid */
+}
+#projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Dynamic columns */
+  gap: 2rem;
+  padding: 2rem 1rem; /* Add some padding around the grid */
+}
+
+/* Skills Card Style */
+.skills-card {
+  background-color: var(--navbar-bg);
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s ease, box-shadow 0.3s ease;
+  text-align: left;
+}
+
+.skills-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+}
+
+.skills-card h3 {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+  color: var(--primary-color);
+}
+
+.skills-card ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.skills-card li {
+  margin-bottom: 0.5rem;
+  color: var(--text-color);
+  font-size: 1rem;
+}
+
+
+.resume-section {
+  display: flex;
+  justify-content: center; /* Centers the button horizontally */
+  align-items: center;     /* Centers the button vertically (optional) */
+          /* Make the container take up the full height of the viewport (optional) */
 }
